[FIX] runbot_merge: too-dark list items in dark mode backend
Turns out the freaky way the backend dark mode is setup really didn't
like my `body-color` change (which I'm pretty sure was intended for
the frontend).

After testing a bit, the frontend body-color is... ok (I don't use it
anyway) so just set the right dark mode body-color in revariable.scss,
that sets up the frontend dark mode how I want and shouldn't affect
much or anything else.

Fixes #1197

--- a/runbot_merge/static/scss/primary_variables.scss
+++ b/runbot_merge/static/scss/primary_variables.scss
@@ -18,8 +18,6 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark,
 );
-// gray-700
-$body-color: #495057;
 // same as table-bg and alert-bg
 $bg-scale: -80%;
 
